--- a/src/main/webapp/WEB-INF/zul/crawler/web/manualcrawl.zul
+++ b/src/main/webapp/WEB-INF/zul/crawler/web/manualcrawl.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2010-2013 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2010-2014 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -30,6 +30,10 @@
 			<button label="Download crawl cache"
 				visible="@load(manualCrawl.crawlCache)"
 				onClick="@command('onDownload')" />
+			<space />
+			<button label="Flush crawl cache"
+				visible="@load(manualCrawl.crawlCache)"
+				onClick="@command('onFlushCache')" />
 			<space />
 			<button target="_blank"
 				href="@load(manualCrawl.crawlXmlApi)" label="XML" />
