--- a/src/main/webapp/WEB-INF/zul/runtime/crawlCache.zul
+++ b/src/main/webapp/WEB-INF/zul/runtime/crawlCache.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2012 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2012-2014 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -14,98 +14,97 @@
 	copy of the GNU General Public License along with OpenSearchServer.
 	If not, see <http://www.gnu.org/licenses/>.
 -->
-<window apply="org.zkoss.bind.BindComposer"
-	viewModel="@id('crawlcache') @init('com.jaeksoft.searchlib.web.controller.runtime.CrawlCacheComposer')">
-	<panel title="@load(crawlCache.currentCrawlCacheLabel)"
-		border="normal">
-		<panelchildren>
-			<grid>
-				<columns>
-					<column align="right" hflex="min" />
-					<column align="left" hflex="min" />
-					<column align="left" />
-				</columns>
-				<rows>
-					<row visible="@load(crawlcache.instanceValid)">
-						<label value="Scope" />
-						<listbox model="@load(crawlcache.crawlScopes)"
-							mold="select" selectedItem="@bind(crawlcache.crawlScope)"
+<panel title="@load(crawlCache.currentCrawlCacheLabel)"
+	apply="org.zkoss.bind.BindComposer"
+	viewModel="@id('crawlcache') @init('com.jaeksoft.searchlib.web.controller.runtime.CrawlCacheComposer')"
+	border="normal">
+	<panelchildren>
+		<grid span="true" sizedByContent="true">
+			<columns>
+				<column align="right" />
+				<column align="left" />
+				<column align="left" />
+			</columns>
+			<rows>
+				<row visible="@load(crawlcache.instanceValid)">
+					<label value="Scope" />
+					<listbox model="@load(crawlcache.crawlScopes)"
+						mold="select" selectedItem="@bind(crawlcache.crawlScope)"
+						onSelect="@command('reload')">
+						<template name="model">
+							<listitem label="@load(each)" />
+						</template>
+					</listbox>
+				</row>
+				<row>
+					<label value="Enabled" />
+					<checkbox
+						checked="@bind(crawlcache.crawlCacheManager.enabled)"
+						onCheck="@command('reload')" />
+					<space />
+				</row>
+				<row>
+					<label value="Cache provider" />
+					<cell>
+						<listbox id="cacheProvider"
+							visible="@load(crawlcache.crawlCacheManager.disabled)"
+							model="@load(crawlcache.crawlCacheProviderList)" mold="select"
+							selectedItem="@bind(crawlcache.crawlCacheManager.crawlCacheProvider)"
 							onSelect="@command('reload')">
 							<template name="model">
-								<listitem label="@load(each)" />
+								<listitem label="@load(each.name)" />
 							</template>
 						</listbox>
-					</row>
-					<row>
-						<label value="Enabled" />
-						<checkbox
-							checked="@bind(crawlcache.crawlCacheManager.enabled)"
-							onCheck="@command('reload')" />
-						<space />
-					</row>
-					<row>
-						<label value="Cache provider" />
-						<cell>
-							<listbox id="cacheProvider"
-								visible="@load(crawlcache.crawlCacheManager.disabled)"
-								model="@load(crawlcache.crawlCacheProviderList)" mold="select"
-								selectedItem="@bind(crawlcache.crawlCacheManager.crawlCacheProvider)"
-								onSelect="@command('reload')">
-								<template name="model">
-									<listitem label="@load(each.name)" />
-								</template>
-							</listbox>
-							<label
-								visible="@load(crawlcache.crawlCacheManager.enabled)"
-								value="@load(crawlcache.crawlCacheManager.crawlCacheProvider.name)" />
-						</cell>
-						<space />
-					</row>
-					<row>
-						<label value="Configuration" />
-						<cell>
-							<label
-								visible="@load(crawlcache.crawlCacheManager.enabled)"
-								value="@load(crawlcache.crawlCacheManager.configuration)" />
-							<textbox cols="80"
-								visible="@load(crawlcache.crawlCacheManager.disabled)"
-								value="@bind(crawlcache.crawlCacheManager.configuration)"
-								onChange="@command('reload')" />
-						</cell>
 						<label
-							value="@load(crawlcache.crawlCacheManager.configurationInformation)" />
-					</row>
-					<row>
-						<label value="Information" />
+							visible="@load(crawlcache.crawlCacheManager.enabled)"
+							value="@load(crawlcache.crawlCacheManager.crawlCacheProvider.name)" />
+					</cell>
+					<space />
+				</row>
+				<row>
+					<label value="Configuration" />
+					<cell>
 						<label
-							value="@load(crawlcache.crawlCacheManager.infos)" />
-					</row>
-					<row>
-						<label value="Cache validity" />
-						<hbox align="center">
-							<intbox constraint="no empty, no negative"
-								value="@bind(crawlcache.crawlCacheManager.expirationValue)"
-								onChange="@command('reload')" />
-							<listbox
-								model="@load(crawlcache.crawlCacheManager.expirationUnitValues)"
-								mold="select"
-								selectedItem="@bind(crawlcache.crawlCacheManager.expirationUnit)" />
-						</hbox>
-						<space />
-					</row>
-					<row>
-						<label value="Flush cache" />
-						<cell>
-							<button label="Flush all"
-								onClick="@command('onFlushAll')" />
-							<button label="Flush expired content"
-								visible="@load(crawlcache.crawlCacheManager.expiration)"
-								onClick="@command('onFlushExpire')" />
-						</cell>
-						<space />
-					</row>
-				</rows>
-			</grid>
-		</panelchildren>
-	</panel>
-</window>
+							visible="@load(crawlcache.crawlCacheManager.enabled)"
+							value="@load(crawlcache.crawlCacheManager.configuration)" />
+						<textbox cols="80"
+							visible="@load(crawlcache.crawlCacheManager.disabled)"
+							value="@bind(crawlcache.crawlCacheManager.configuration)"
+							onChange="@command('reload')" />
+					</cell>
+					<label
+						value="@load(crawlcache.crawlCacheManager.configurationInformation)" />
+				</row>
+				<row>
+					<label value="Information" />
+					<label
+						value="@load(crawlcache.crawlCacheManager.infos)" />
+				</row>
+				<row>
+					<label value="Cache validity" />
+					<hbox align="center">
+						<intbox constraint="no empty, no negative"
+							value="@bind(crawlcache.crawlCacheManager.expirationValue)"
+							onChange="@command('reload')" />
+						<listbox
+							model="@load(crawlcache.crawlCacheManager.expirationUnitValues)"
+							mold="select"
+							selectedItem="@bind(crawlcache.crawlCacheManager.expirationUnit)" />
+					</hbox>
+					<space />
+				</row>
+				<row>
+					<label value="Flush cache" />
+					<cell>
+						<button label="Flush all"
+							onClick="@command('onFlushAll')" />
+						<button label="Flush expired content"
+							visible="@load(crawlcache.crawlCacheManager.expiration)"
+							onClick="@command('onFlushExpire')" />
+					</cell>
+					<space />
+				</row>
+			</rows>
+		</grid>
+	</panelchildren>
+</panel>
