--- a/src/main/webapp/WEB-INF/zul/query/search/filters.zul
+++ b/src/main/webapp/WEB-INF/zul/query/search/filters.zul
@@ -64,4 +64,12 @@
 			</listitem>
 		</template>
 	</listbox>
+	<hlayout>
+		<label>Default operator:</label>
+		<listbox mold="select"
+			selectedItem="@bind(filters.defaultOperator)">
+			<listitem label="AND" value="AND" />
+			<listitem label="OR" value="OR" />
+		</listbox>
+	</hlayout>
 </window>
