--- a/src/main/webapp/WEB-INF/zul/crawler/web/pattern.zul
+++ b/src/main/webapp/WEB-INF/zul/crawler/web/pattern.zul
@@ -55,7 +55,7 @@
 		<template name="model">
 			<listitem>
 				<listcell>
-					<textbox inplace="true" value="@load(each.pattern)"
+					<textbox inplace="true" value="@load(each)"
 						width="95%" readonly="true" />
 				</listcell>
 			</listitem>
