--- a/src/main/webapp/WEB-INF/zul/query/result/facets.zul
+++ b/src/main/webapp/WEB-INF/zul/query/result/facets.zul
@@ -30,7 +30,7 @@
 	<panel title="@load(result.selectedFacet.facetField.name)"
 		collapsible="true">
 		<panelchildren>
-			<listbox model="@load(result.selectedFacet.array)"
+			<listbox model="@load(result.selectedFacet.list)"
 				mold="paging" pageSize="10">
 				<listhead>
 					<listheader align="right" />
