--- a/src/main/webapp/WEB-INF/zul/crawler/database/crawl_edit_mongodb.zul
+++ b/src/main/webapp/WEB-INF/zul/crawler/database/crawl_edit_mongodb.zul
@@ -61,16 +61,16 @@
 			<label value="Enter the name of the collection" />
 		</row>
 		<row>
-			<label value="Ref Query (json format): " />
+			<label value="Criteria (json format): " />
 			<textbox rows="10"
-				value="@bind(dbCrawlList.currentCrawl.refQuery)" width="95%" />
-			<label value="Enter the query to retrieve data" />
+				value="@bind(dbCrawlList.currentCrawl.criteria)" width="95%" />
+			<label value="Specifies selection criteria using query operators" />
 		</row>
 		<row>
-			<label value="Key Query (json format): " />
+			<label value="Projection (json format): " />
 			<textbox rows="10"
-				value="@bind(dbCrawlList.currentCrawl.keyQuery)" width="95%" />
-			<label value="Enter the query to retrieve data" />
+				value="@bind(dbCrawlList.currentCrawl.projection)" width="95%" />
+			<label value="Specifies the fields to return using projection operators" />
 		</row>
 		<row>
 			<cell />
