--- a/src/main/webapp/WEB-INF/zul/renderer/edit_general.zul
+++ b/src/main/webapp/WEB-INF/zul/renderer/edit_general.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2012-2014 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2012-2015 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -56,6 +56,16 @@
 					<label value="Many results text: " />
 					<textbox
 						value="@bind(renderer.currentRenderer.resultsFoundText)"
+						cols="50" />
+				</row>
+				<row>
+					<label value="Filters panel title text: " />
+					<textbox
+						value="@bind(renderer.currentRenderer.filtersTitleText)"
+						cols="50" />
+					<label value="Clear all filters text: " />
+					<textbox
+						value="@bind(renderer.currentRenderer.clearFiltersText)"
 						cols="50" />
 				</row>
 				<row>
