--- a/src/main/webapp/WEB-INF/zul/runtime/index.zul
+++ b/src/main/webapp/WEB-INF/zul/runtime/index.zul
@@ -23,6 +23,8 @@
 				visible="@load(runtime.instanceValid)" />
 			<tab id="tabRuntimeCommands" label="Commands"
 				visible="@load(runtime.commandsRights)" />
+			<tab id="tabRuntimeCache" label="Cache"
+				visible="@load(runtime.instanceValid)" />
 			<tab id="tabRuntimeIndex" label="Index"
 				visible="@load(runtime.instanceValid)" />
 			<tab id="tabRuntimeTerms" label="Terms"
@@ -46,6 +48,9 @@
 			</tabpanel>
 			<tabpanel fulfill="tabRuntimeCommands.onSelect">
 				<include src="WEB-INF/zul/runtime/commands.zul" />
+			</tabpanel>
+			<tabpanel fulfill="tabRuntimeCache.onSelect">
+				<include src="WEB-INF/zul/runtime/cache.zul" />
 			</tabpanel>
 			<tabpanel fulfill="tabRuntimeIndex.onSelect">
 				<include src="WEB-INF/zul/runtime/indices.zul" />
