--- a/src/main/webapp/WEB-INF/zul/query/search/geo.zul
+++ b/src/main/webapp/WEB-INF/zul/query/search/geo.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2013-2014 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2013-2015 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -44,12 +44,12 @@
 			</row>
 			<row>
 				<label value="Latitude" />
-				<textbox constraint="/[0-9,.]*/"
+				<textbox constraint="/[0-9,.-]*/"
 					value="@bind(geo.request.geoParameters.latitude)" />
 			</row>
 			<row>
 				<label value="Longitude" />
-				<textbox constraint="/[0-9,.]*/"
+				<textbox constraint="/[0-9,.-]*/"
 					value="@bind(geo.request.geoParameters.longitude)" />
 			</row>
 			<row>
