--- a/src/main/webapp/WEB-INF/zul/query/index.zul
+++ b/src/main/webapp/WEB-INF/zul/query/index.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2008-2012 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2008-2015 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -103,6 +103,8 @@
 			visible="@load(query.editingSearchPattern)" />
 		<include src="WEB-INF/zul/query/requestSearchField.zul"
 			visible="@load(query.editingSearchField)" />
+		<include src="WEB-INF/zul/query/requestSearchMerged.zul"
+			visible="@load(query.editingSearchMerged)" />
 		<include src="WEB-INF/zul/query/requestSpellCheck.zul"
 			visible="@load(query.editingSpellCheck)" />
 		<include src="WEB-INF/zul/query/requestMoreLikeThis.zul"
