--- a/src/main/webapp/WEB-INF/zul/crawler/web/hosts.zul
+++ b/src/main/webapp/WEB-INF/zul/crawler/web/hosts.zul
@@ -36,8 +36,8 @@
 		</auxhead>
 		<template name="model" var="facet">
 			<listitem>
-				<listcell label="@load(facet.term)" />
-				<listcell label="@load(facet.count)" />
+				<listcell label="@load(facet.key)" />
+				<listcell label="@load(facet.value.count)" />
 				<listcell />
 			</listitem>
 		</template>
