--- a/src/main/webapp/WEB-INF/zul/reports/queryreports.zul
+++ b/src/main/webapp/WEB-INF/zul/reports/queryreports.zul
@@ -70,8 +70,8 @@
 		</listhead>
 		<template name="model" var="facet">
 			<listitem>
-				<listcell label="@load(facet.term)" />
-				<listcell label="@load(facet.count)" />
+				<listcell label="@load(facet.key)" />
+				<listcell label="@load(facet.value.count)" />
 			</listitem>
 		</template>
 	</listbox>
