--- a/src/main/webapp/WEB-INF/zul/runtime/indices.zul
+++ b/src/main/webapp/WEB-INF/zul/runtime/indices.zul
@@ -20,7 +20,7 @@
 		<auxhead>
 			<auxheader colspan="3" label="Cache" align="center" />
 			<auxheader colspan="4" />
-			<auxheader colspan="5" label="Statistics &amp; status"
+			<auxheader colspan="4" label="Statistics &amp; status"
 				align="center" />
 			<auxheader />
 		</auxhead>
@@ -42,8 +42,6 @@
 				tooltiptext="Contains delete document" />
 			<column label="numDeletedDocs" hflex="min"
 				tooltiptext="Number of deleted documents" />
-			<column label="optimized?" hflex="min"
-				tooltiptext="Is the index optimized" />
 			<column />
 		</columns>
 		<rows>
@@ -63,8 +61,31 @@
 					<label value="@load(index.statistics.deletions)" />
 					<label
 						value="@load(index.statistics.numDeletedDocs)" />
-					<label value="@load(index.statistics.optimized)" />
 					<label value="" />
+				</row>
+			</template>
+		</rows>
+	</grid>
+	<separator />
+	<grid model="@load(index.indexList)" visible="@load(index.multi)">
+		<columns>
+			<column label="Index name" tooltiptext="Index name" />
+			<column label="Remove"
+				tooltiptext="Remove the index from the list" />
+		</columns>
+		<auxhead>
+			<auxheader colspan="2">
+				<label value="Index name: " />
+				<textbox value="@bind(index.indexChoice)" cols="50" />
+				<button label="Add" onClick="@command('onAddIndex')" />
+			</auxheader>
+		</auxhead>
+		<rows>
+			<template name="model" var="indexName">
+				<row>
+					<label value="@load(indexName)" />
+					<button label="Remove"
+						onClick="@command('onRemoveIndex', indexName=indexName)" />
 				</row>
 			</template>
 		</rows>
