--- a/src/main/webapp/WEB-INF/zul/crawler/file/edit.zul
+++ b/src/main/webapp/WEB-INF/zul/crawler/file/edit.zul
@@ -66,6 +66,17 @@
 							value="@bind(filepathedit.currentFilePath.domain)" cols="50" />
 					</row>
 					<row visible="@load(filepathedit.smbFileType)">
+						<label value="KRB5 Keytab path: " />
+						<textbox
+							value="@bind(filepathedit.currentFilePath.keyTabPath)" cols="80" />
+					</row>
+					<row visible="@load(filepathedit.smbFileType)">
+						<label value="KRB5 ini path: " />
+						<textbox
+							value="@bind(filepathedit.currentFilePath.krb5IniPath)"
+							cols="80" />
+					</row>
+					<row visible="@load(filepathedit.smbFileType)">
 						<label value="Security permissions: " />
 						<listbox
 							model="@load(filepathedit.smbSecurityPermissions)" mold="select"
