--- a/src/main/webapp/WEB-INF/zul/crawler/web/url.zul
+++ b/src/main/webapp/WEB-INF/zul/crawler/web/url.zul
@@ -183,6 +183,8 @@
 			</listheader>
 			<listheader label="Links" tooltiptext="Backlink count"
 				valign="top" hflex="min" />
+			<listheader label="Depth" tooltiptext="Depth" valign="top"
+				hflex="min" />
 		</listhead>
 		<template name="model" var="url">
 			<listitem>
@@ -207,10 +209,11 @@
 				<listcell label="@load(url.indexStatus.name)" />
 				<listcell label="@load(url.host)" />
 				<listcell label="@load(url.backlinkCount)" />
+				<listcell label="@load(url.depth)" />
 			</listitem>
 		</template>
 		<listfoot>
-			<listfooter span="16">
+			<listfooter span="17">
 				<paging id="paging" detailed="true"
 					totalSize="@load(searchUrl.totalSize)"
 					pageSize="@load(searchUrl.pageSize)"
