--- a/src/main/webapp/WEB-INF/zul/runtime/commands.zul
+++ b/src/main/webapp/WEB-INF/zul/runtime/commands.zul
@@ -87,6 +87,33 @@
 						href="@load(commands.truncateJsonApi)" label="JSON" />
 				</cell>
 			</row>
+			<row>
+				<label value="Merge data: " />
+				<cell>
+					<label value="Source index: " />
+					<listbox mold="select"
+						selectedItem="@bind(commands.mergeIndex)"
+						model="@load(commands.indexList)">
+						<template name="model">
+							<listitem label="@load(each)" />
+						</template>
+					</listbox>
+					<button label="Merge"
+						onClick="@command('onMergeData')" />
+				</cell>
+				<cell>
+					<label value="@load(commands.mergeStatus)" />
+					<space />
+					<image visible="@load(commands.runningMerge)"
+						src="/images/ajax-loader.gif" />
+				</cell>
+				<cell>
+					<button target="_blank"
+						href="@load(commands.mergeXmlApi)" label="XML" />
+					<button target="_blank"
+						href="@load(commands.mergeJsonApi)" label="JSON" />
+				</cell>
+			</row>
 		</rows>
 	</grid>
 	<timer delay="5000" repeats="true" onTimer="@command('onTimer')"
