--- a/src/main/webapp/WEB-INF/zul/crawler/web/robotstxt.zul
+++ b/src/main/webapp/WEB-INF/zul/crawler/web/robotstxt.zul
@@ -1,6 +1,6 @@
 <!--
 	License Agreement for OpenSearchServer
-	Copyright (C) 2008-2012 Emmanuel Keller / Jaeksoft
+	Copyright (C) 2008-2017 Emmanuel Keller / Jaeksoft
 	http://www.open-search-server.com
 	This file is part of OpenSearchServer.
 	OpenSearchServer is free software: you can
@@ -15,72 +15,72 @@
 	If not, see <http://www.gnu.org/licenses/>.
 -->
 <window apply="org.zkoss.bind.BindComposer"
-	viewModel="@id('robotsTxtCtrl') @init('com.jaeksoft.searchlib.web.controller.crawler.web.RobotsTxtController')">
-	<checkbox label="Enabled"
-		checked="@bind(robotsTxtCtrl.enabled.value)" />
-	<separator />
-	<listbox fixedLayout="true"
-		model="@load(robotsTxtCtrl.robotsTxtList)" multiple="false"
-		checkmark="false" mold="paging"
-		selectedItem="@bind(robotsTxtCtrl.selectedItem)"
-		pageSize="@load(robotsTxtCtrl.pageSize)">
-		<listhead sizable="true">
-			<listheader label="Hostname" />
-			<listheader label="Download date" />
-			<listheader label="Expiration date" />
-		</listhead>
-		<auxhead>
-			<auxheader colspan="3">
-				<hbox width="100%">
-					<textbox cols="70"
-						value="@bind(robotsTxtCtrl.searchString)" />
-					<button label="Search / Refresh"
-						onClick="@command('onSearch')" />
-					<space />
-					<button label="Reset" onClick="@command('onReset')" />
-				</hbox>
-			</auxheader>
-		</auxhead>
-		<template name="model" var="robotsTxt">
-			<listitem>
-				<listcell label="@load(robotsTxt.crawl.urlItem.URL)" />
-				<listcell label="@load(robotsTxt.crawlDate)" />
-				<listcell label="@load(robotsTxt.expirationDate)" />
-			</listitem>
-		</template>
-	</listbox>
-	<separator height="10px" />
-	<hbox width="100%">
-		<panel title="RobotsTxt content" border="normal">
-			<panelchildren>
-				<listbox
-					model="@load(robotsTxtCtrl.selectedItem.disallowList.map)">
-					<template name="model" var="entry">
-						<listitem>
-							<listcell>
-								<panel title="@load(entry.key)">
-									<panelchildren>
-										<listbox
-											model="@load(entry.value.map)">
-											<listhead sizable="true">
-												<listheader label="Path" />
-												<listheader label="Allow" />
-											</listhead>
-											<template name="model"
-												var="entry2">
-												<listitem>
-													<listcell label="@load(entry2.key)" />
-													<listcell label="@load(entry2.value)" />
-												</listitem>
-											</template>
-										</listbox>
-									</panelchildren>
-								</panel>
-							</listcell>
-						</listitem>
-					</template>
-				</listbox>
-			</panelchildren>
-		</panel>
-	</hbox>
+        viewModel="@id('robotsTxtCtrl') @init('com.jaeksoft.searchlib.web.controller.crawler.web.RobotsTxtController')">
+    <checkbox label="Enabled"
+              checked="@bind(robotsTxtCtrl.enabled.value)"/>
+    <separator/>
+    <listbox fixedLayout="true"
+             model="@load(robotsTxtCtrl.robotsTxtList)" multiple="false"
+             checkmark="false" mold="paging"
+             selectedItem="@bind(robotsTxtCtrl.selectedItem)"
+             pageSize="@load(robotsTxtCtrl.pageSize)">
+        <listhead sizable="true">
+            <listheader label="Hostname"/>
+            <listheader label="Download date"/>
+            <listheader label="Expiration date"/>
+        </listhead>
+        <auxhead>
+            <auxheader colspan="3">
+                <hbox width="100%">
+                    <textbox cols="70"
+                             value="@bind(robotsTxtCtrl.searchString)"/>
+                    <button label="Search / Refresh"
+                            onClick="@command('onSearch')"/>
+                    <space/>
+                    <button label="Reset" onClick="@command('onReset')"/>
+                </hbox>
+            </auxheader>
+        </auxhead>
+        <template name="model" var="robotsTxt">
+            <listitem>
+                <listcell label="@load(robotsTxt.crawl.urlItem.URL)"/>
+                <listcell label="@load(robotsTxt.crawlDate)"/>
+                <listcell label="@load(robotsTxt.expirationDate)"/>
+            </listitem>
+        </template>
+    </listbox>
+    <separator height="10px"/>
+    <hbox width="100%">
+        <panel title="RobotsTxt content" border="normal">
+            <panelchildren>
+                <listbox
+                        model="@load(robotsTxtCtrl.selectedItem.clauses)">
+                    <template name="model" var="entry">
+                        <listitem>
+                            <listcell>
+                                <panel title="@load(entry.key)">
+                                    <panelchildren>
+                                        <listbox
+                                                model="@load(entry.value.clauses)">
+                                            <listhead sizable="true">
+                                                <listheader label="Path"/>
+                                                <listheader label="Allow"/>
+                                            </listhead>
+                                            <template name="model"
+                                                      var="entry2">
+                                                <listitem>
+                                                    <listcell label="@load(entry2.key.pattern)"/>
+                                                    <listcell label="@load(entry2.value)"/>
+                                                </listitem>
+                                            </template>
+                                        </listbox>
+                                    </panelchildren>
+                                </panel>
+                            </listcell>
+                        </listitem>
+                    </template>
+                </listbox>
+            </panelchildren>
+        </panel>
+    </hbox>
 </window>
